[project]
name = "hugo-unifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nictru", email = "nictru32@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.11.4",
    "rich-click>=1.8.8",
]

[project.scripts]
hugo-unifier = "hugo_unifier.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
